# serv

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml  docker.yml
.woodpecker/: ci.yaml
deploy/helm-chart/: Chart.yaml  values.yaml
deploy/helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/helm-chart/templates/tests/: test-connection.yaml
src/: main.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/server/: Cargo.toml  Dockerfile
