[package]
name = "serv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "macros", "headers"] }
lazy_static = "1.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "fs", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
