[package]
name = "serv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
lazy_static = "1.4"
miette = { version = "7.2", features = ["fancy"] }
rand = "0.8"
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "fs", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
