[workspace]
members = ["src/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
publish = false

[workspace.lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
range_plus_one = "allow"
struct_field_names = "allow"

[workspace.dependencies]
arboard = "3.3"
axum = { version = "0.7" }
lazy_static = "1.4"
miette = { version = "7.2" }
notify = "6.1"
rand = "0.8"
reqwest = "0.12"
tokio = { version = "1.34" }
tracing = "0.1"
tracing-subscriber = "0.3"
