[package]
name = "serv-client"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
arboard.workspace = true
notify.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
