[package]
name = "serv-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart", "macros"] }
lazy_static.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "fs", "macros", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
